fix overflow

--- a/styles.css
+++ b/styles.css
@@ -104,28 +104,6 @@ html {
     opacity: 1;
     margin: 0 15px 0 15px
   }
-
-  /* #carousel div.prev {
-    z-index: 5;
-  }
-
-  #carousel div.prevLeftSecond {
-    z-index: 4;
-    opacity: 0.7;
-  }
-
-  #carousel div.selected {
-    z-index: 10;
-    
-  }
-
-  #carousel div.next {
-    z-index: 5;
-  }
-
-  #carousel div.nextRightSecond {
-    z-index: 4;
-  } */
   
   .buttons {
     position: fixed;
@@ -212,7 +190,7 @@ html {
       font-size: 0.85rem;
       line-height: 1.4;
       box-sizing: border-box;
-      overflow: hidden; /* or scroll if you want scrollable overflow */
+      overflow-x: hidden;
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
